crates/ink/tests/ui/blake2b/fail/invalid_parameter_type_02.stderr
error: expected string or byte string literal as input. found Lit::Int { token: 42 }
 --> tests/ui/blake2b/fail/invalid_parameter_type_02.rs:1:38
  |
1 | const _: [u8; 32] = ink::blake2x256!(42);
  |                                      ^^
